add DonationComment Test